material design, branch list

--- a/gitWebApp/src/app/app.component.html
+++ b/gitWebApp/src/app/app.component.html
@@ -1,5 +1,8 @@
+<div class="row">
+  <div class="col-md-3">
+    <branch-list></branch-list>
+  </div>
+  <div class="col-md-7">
 
-  <h1>
-    kurwa gitWeb biczys
-  </h1>
-
+  </div>
+</div>
