--- a/gitWebApp/src/styles.css
+++ b/gitWebApp/src/styles.css
@@ -1,6 +1,8 @@
 /*
 ./src/styles.css
 */
+@import '~@angular/material/prebuilt-themes/purple-green.css';
+
 *, *:before, *:after {
     box-sizing: border-box;
   }
@@ -10,9 +12,10 @@
     padding: 0;
   }
   
-  body{
-    /* background: #000; */
-  }
+  /* body{
+     background: #000;
+     color: white;
+  } */
   
   .ui-autocomplete, .ui-inputtext {
     width: 100%;
