Add Status feature

--- a/gitWebApp/src/app/app.component.html
+++ b/gitWebApp/src/app/app.component.html
@@ -2,7 +2,8 @@
   <div class="col-md-3">
     <branch-list></branch-list>
   </div>
-  <div class="col-md-7">
-
+  <div class="col-md-6"></div>
+  <div class="col-md-3">
+    <status-list (onStatusSelected)="onStatusSelected($event)"></status-list>
   </div>
 </div>
