Add commit option

--- a/gitWebApp/src/app/status/status-list.component.html
+++ b/gitWebApp/src/app/status/status-list.component.html
@@ -5,10 +5,15 @@
         </md-panel-title>
     </md-expansion-panel-header>
 
+    <commit-form></commit-form>
+    
+    <md-divider></md-divider>
+    
     <md-list>
         <md-list-item *ngFor="let status of statusList" (click)=statusSelected(status)>
             <md-icon md-list-icon>{{getIconName(status)}}</md-icon>
             <h4 md-line> {{status.path}}</h4>
         </md-list-item>
     </md-list>
+
 </md-expansion-panel>
