add gravatar service and configuration api endpoint

--- a/gitWebApp/src/app/toolbar/header-toolbar.component.scss
+++ b/gitWebApp/src/app/toolbar/header-toolbar.component.scss
@@ -14,3 +14,16 @@
     flex-wrap: wrap;
     color: white;
 }
+
+#user-info-section{
+    padding: 0 14px;
+    margin: auto;
+}
+
+.navbar-spacer{
+    flex: 1 1 auto;
+}
+
+.example-icon{
+    padding: 0 14px;
+}
