--- a/gitWebApp/src/app/toolbar/header-toolbar.component.html
+++ b/gitWebApp/src/app/toolbar/header-toolbar.component.html
@@ -1,2 +1,9 @@
 <div id="header-toolbar">
+    <span>gitElectron</span>
+    <span class="navbar-spacer"></span>
+    <button md-icon-button>
+            <md-icon class="md-24">build</md-icon>
+    </button>
+    <span class="navbar-text">Welcome {{userName}}</span>
+    <img *ngIf="avatarExists" src="{{avatarUrl}}">
 </div>
