add working directory and popup with mapped repositories:

--- a/gitWebApp/src/app/toolbar/header-toolbar.component.scss
+++ b/gitWebApp/src/app/toolbar/header-toolbar.component.scss
@@ -15,13 +15,12 @@
     color: white;
 }
 
-#user-info-section{
-    padding: 0 14px;
-    margin: auto;
-}
-
 .navbar-spacer{
     flex: 1 1 auto;
+}
+
+.navbar-text{
+    padding: 0 14px;
 }
 
 .example-icon{
