--- a/gitWebApp/src/app/toolbar/header-toolbar.component.html
+++ b/gitWebApp/src/app/toolbar/header-toolbar.component.html
@@ -2,15 +2,13 @@
     <span>gitElectron</span>
     <span class="navbar-spacer"></span>
     <span>Working on: </span>
-
-
     <button md-button [mdMenuTriggerFor]="repositories">
         <md-icon class="md-24">menu</md-icon>
         {{currentRepository}}
     </button>
 
     <md-menu #repositories="mdMenu">
-        <button md-menu-item *ngFor="let repository of getMappedRepositories">{{repository}}</button>
+        <button md-menu-item *ngFor="let repository of getMappedRepositories">{{repository.path}}</button>
         <button md-button color='warn' (click)="mapNewRepository()">
                 map new
                 <md-icon class="md-24">add</md-icon>
