--- a/gitWebApp/src/app/repository/new-repository.component.html
+++ b/gitWebApp/src/app/repository/new-repository.component.html
@@ -7,7 +7,6 @@
         <md-tab label="Clone">to be supplied</md-tab>
     </md-tab-group>
 </md-dialog-content>
-<md-dialog-actions>
+<!-- <md-dialog-actions>
     <button md-button md-dialog-close>Cancel</button>
-    <button md-button [md-dialog-close]="true">Map</button>
-</md-dialog-actions>
+</md-dialog-actions> -->
