refactor of config services, introdiuce *.store.services as global reduxstyle store management

--- a/gitWebApp/src/app/toolbar/header-toolbar.component.html
+++ b/gitWebApp/src/app/toolbar/header-toolbar.component.html
@@ -20,5 +20,5 @@
             <md-icon class="md-24">build</md-icon>
     </button>
     <span class="navbar-text">Welcome {{userName}}</span>
-    <img *ngIf="avatarExists" src="{{avatarUrl}}">
+    <img *ngIf="repository.user.hasAvatar" src="{{repository.user.avatarUrl}}">
 </div>
