add simple commit list

--- a/gitWebApp/src/app/app.component.html
+++ b/gitWebApp/src/app/app.component.html
@@ -3,7 +3,9 @@
   <div class="col-md-3">
     <branch-list></branch-list>
   </div>
-  <div class="col-md-6"></div>
+  <div class="col-md-6">
+    <commit-list></commit-list>
+  </div>
   <div class="col-md-3">
     <status-list (onStatusSelected)="onStatusSelected($event)"></status-list>
   </div>
