--- a/gitWebApp/src/app/status/status-list.component.html
+++ b/gitWebApp/src/app/status/status-list.component.html
@@ -9,7 +9,8 @@
 
     <md-divider></md-divider>
 
-    <md-list>
+    <md-list *ngIf="stagedFiles.length > 0">
+        <button md-raised-button color="warn" (click)="unstageAll()">Unstage all</button>
         <md-list-item *ngFor="let file of stagedFiles" (click)=statusSelected(file)>
             <md-icon md-list-icon>{{getIconName(file)}}</md-icon>
             <h4 md-line> {{file.path}}</h4>
@@ -19,7 +20,8 @@
 
     <md-divider *ngIf="unStagedFiles.length > 0 && stagedFiles.length > 0"></md-divider>
 
-    <md-list>
+    <md-list *ngIf="unStagedFiles.length > 0">
+        <button md-raised-button color="accent" (click)="stageAll()">Stage all</button>
         <md-list-item *ngFor="let file of unStagedFiles" (click)=statusSelected(file)>
             <md-icon md-list-icon>{{getIconName(file)}}</md-icon>
             <h4 md-line> {{file.path}}</h4>
