add simple commit details

--- a/gitWebApp/src/app/app.component.html
+++ b/gitWebApp/src/app/app.component.html
@@ -8,5 +8,6 @@
   </div>
   <div class="col-md-3">
     <status-list (onStatusSelected)="onStatusSelected($event)"></status-list>
+    <commit-details></commit-details>
   </div>
 </div>
