--- a/gitWebApp/src/app/commit/commit-list.component.scss
+++ b/gitWebApp/src/app/commit/commit-list.component.scss
@@ -10,6 +10,21 @@
     width: 100%;
 }
 
-.commit-list-item{
+.show-details-button{
+    margin-left: auto;
+}
 
+.show-details-button{
+    opacity: 0.1;
+}
+
+.commit-list-item:hover .show-details-button{
+    opacity: 1;
+}
+
+.commit-list-item-components{
+    display: flex;
+    width: 100%;
+    align-items: center;
+    position: relative;
 }
