commit details -- add change list

--- a/gitWebApp/src/app/app.component.html
+++ b/gitWebApp/src/app/app.component.html
@@ -7,7 +7,9 @@
     <commit-list></commit-list>
   </div>
   <div class="col-md-3">
-    <status-list (onStatusSelected)="onStatusSelected($event)"></status-list>
-    <commit-details></commit-details>
+    <div id="left-panel">
+      <status-list (onStatusSelected)="onStatusSelected($event)"></status-list>
+      <commit-details></commit-details>
+    </div>
   </div>
 </div>
