status-list refactoring, bug fixes

--- a/gitWebApp/src/app/commit/commit-list.component.scss
+++ b/gitWebApp/src/app/commit/commit-list.component.scss
@@ -15,11 +15,11 @@
 }
 
 .show-details-button{
-    opacity: 0.1;
+    display: none
 }
 
 .commit-list-item:hover .show-details-button{
-    opacity: 1;
+    display: block;
 }
 
 .commit-list-item-components{
