add remote list

--- a/gitWebApp/src/app/toolbar/header-toolbar.component.html
+++ b/gitWebApp/src/app/toolbar/header-toolbar.component.html
@@ -16,7 +16,7 @@
     </md-menu>
 
     <span class="navbar-spacer"></span>
-    <button md-icon-button>
+    <button md-icon-button (click)="showRepositoryConfiguration()">
             <md-icon class="md-24">build</md-icon>
     </button>
     <span class="navbar-text">Welcome {{userName}}</span>
