--- a/gitWebApp/src/app/toolbar/header-toolbar.component.html
+++ b/gitWebApp/src/app/toolbar/header-toolbar.component.html
@@ -1,6 +1,11 @@
 <div id="header-toolbar">
     <span>gitElectron</span>
     <span class="navbar-spacer"></span>
+    <button md-icon-button md-tooltip="Push" (click)="push()">
+            <md-icon class="md-24">publish</md-icon>
+    </button>
+    <span class="navbar-spacer"></span>
+    
     <span>Working on: </span>
     <button md-button [mdMenuTriggerFor]="repositories">
         <md-icon class="md-24">menu</md-icon>
