--- a/gitWebApp/src/app/toolbar/header-toolbar.component.scss
+++ b/gitWebApp/src/app/toolbar/header-toolbar.component.scss
@@ -26,3 +26,9 @@
 .example-icon{
     padding: 0 14px;
 }
+
+.repository-operation-spinner{
+    height: 40px;
+    width: 40px;
+    padding: 7px;
+}
